--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </style>
@@ -29,7 +30,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Software Engineer</p>
+          <p><i class="fas fa-graduation-cap fa-fw w3-margin-right w3-large w3-text-teal"></i>Bsc. Software Engineer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i> Melbourne, Australia, 09 Hawsleigh Ave, Balaclava 3183</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>alexander.giraldo08@gmail.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(+61) 479036626</p>
@@ -66,6 +67,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
           </div>
+          <p>French</p>
+          <div class="w3-light-grey w3-round-xlarge">
+            <div class="w3-round-xlarge w3-teal" style="height:24px;width:30%"></div>
+          </div>
           <br>
         </div>
       </div><br>
@@ -78,18 +83,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         
         <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Career Objective</h2> 
-            <div class="w3-container">
-                <p>Enthusiastic Software Engineer gratuaded with problem solving skills, agile development. Seeking a position as a software engineer, to obtain a challenging front end’s, backend developers position, in an organization that would allow me to develop my skills while contributing to the organizational goals.
+            <div class="w3-container" style="text-align: justify;
+            text-justify: inter-word;">
+                <p >Enthusiastic Bsc. Software Engineer  with problem solving skills, agile development. Seeking a position as a software engineer, to obtain a challenging front end’s, backend developers role,
+                   in an organization that would allow me to develop my skills while contributing to the organizational goals.
 
-                    in a challenging and competitive environment where I could improve my knowledge and my capabilities would be used for the development of the organization.
+                    in a challenging and competitive environment where I could improve my knowledge and my capabilities 
+                    would be used for the development of the organization.
                 </p>
             </div>
         </div>
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16">Visa</h2> 
+            <h2 class="w3-text-grey w3-padding-16"><i class="far fa-address-card fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Visa</h2> 
             <div class="w3-container w3-margin-bottom">
-                <p>I am current on a student VISA-500 with the visa grant number 0039584829500. 
+                <p>In Australia, I am current on a student VISA-500 with the visa grant number 0039584829500. 
                     Furthermore, I am able to work for 20 hours per week.
                 </p>
             </div>
@@ -97,7 +105,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
         
         <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16">Key skills and competencies</h2> 
+            <h2 class="w3-text-grey w3-padding-16"><i class="far fa-edit fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Key skills and competencies</h2> 
             <div class="w3-container">
                 <ul>
                     <li>Super computer system analysis and design skills in current methodologies.</li>
@@ -116,7 +124,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6>SimplyEstate </h6> - Australia
           <p>Responsabilities</p>
           <ul>
-                <li>Developing software in a variety of languages such as javascript, php, mysql</li>
+                <li>Developing software in a variety of languages such as javascript, php, mysql.</li>
                 <li>Participating in all phases of the software development cycle.</li>
                 <li>Analysing user requirements.</li>
                 <li>Supporting existing software products and making progress on new products.</li>
@@ -130,7 +138,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6>Subsidiary of Servientrega S.A.S</h6> -<i>Colombia</i>
           <p>Responsabilities</p>
           <ul>
-              <li>Designing and developing the full website aplication</li>
+              <li>Designing and developing the full website aplication.</li>
               <li>Developing UI, management layer and Services.</li>
               <li>Write and execute test cases to ensure all functionalities are working as intended.</li>
               <li>Asking the end user the right questions so as to get a good idea of exactly what they want.</li>
@@ -163,7 +171,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6>G.T.A S.A.S</h6> -<i>Colombia</i>
             <p>Responsabilities</p>
             <ul>
-                <li>Assisting with database design and data model decisions</li>
+                <li>Assisting with database design and data model decisions.</li>
                 <li>Developing and building systems for end users.</li>
                 <li>Visualizations data to clients.</li>
                 <li>Showing company clients how they can improve their storing and use of data.</li>
@@ -174,31 +182,31 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </div>
 
       <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-laptop-code fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Ongoing Intensive English Course </b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2020 </h6>
-          International House - Melbourne 
+          <a href="https://ihsydney.com.au/">International House</a>  - Melbourne 
           <hr>
         </div>
         <div class="w3-container">
             <h5 class="w3-opacity"><b> Intensive English Course </b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2019- Apr 2020 </h6>
-            Discovery English - Melbourne 
+           <a href="https://discoverenglish.vic.edu.au/">Discovery English</a>  - Melbourne 
             <hr>
           </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Software Engineer </b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2008 - 2016</h6>
           <p>Bachelor Degree</p>
-          <p>Universidad Pontificia Bolivariana </p>
+          <p><a href="https://www.upb.edu.co/es/home">Universidad Pontificia Bolivariana </a></p>
           <p> Medellín-Colombia (The study was part-time as I worked managing my family estate)</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>High School</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2005 - 2007</h6>
-          <p>Universidad Pontificia Bolivariana </p>
+          <p>College of Universidad Pontificia Bolivariana </p>
           <br>
         </div>
       </div>
@@ -214,12 +222,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <a href="https://www.facebook.com/alexander.giraldo.16/"><i class="fa fa-facebook-official w3-hover-opacity" ></i></a>
+  <a href="https://www.instagram.com/alexander.giraldo.16/?hl=en"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+  <a href="https://www.linkedin.com/in/alexander-giraldo-ospina/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
