change of the content
It change the link of the College.
Specification of Bachelor Degree

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <p>French</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:30%"></div>
+            <div class="w3-round-xlarge w3-teal" style="height:24px;width:15%"></div>
           </div>
           <br>
         </div>
@@ -196,7 +196,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <hr>
           </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Software Engineer </b></h5>
+          <h5 class="w3-opacity"><b>Software Engineer and Informatics Engineer</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2008 - 2016</h6>
           <p>Bachelor Degree</p>
           <p><a href="https://www.upb.edu.co/es/home">Universidad Pontificia Bolivariana </a></p>
@@ -206,7 +206,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>High School</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2005 - 2007</h6>
-          <p>College of Universidad Pontificia Bolivariana </p>
+          <p><a href="https://www.upb.edu.co/es/colegio">College of the University Pontificia Bolivariana</a> </p>
           <br>
         </div>
       </div>
