change of the information of the cv

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fas fa-graduation-cap fa-fw w3-margin-right w3-large w3-text-teal"></i>Bsc. Software Engineer</p>
+          <p><i class="fas fa-graduation-cap fa-fw w3-margin-right w3-large w3-text-teal"></i>Bsc. Software Engineer and Informatics Engineer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i> Melbourne, Australia, 09 Hawsleigh Ave, Balaclava 3183</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>alexander.giraldo08@gmail.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(+61) 479036626</p>
